# OEPlugin

./: .gitignore  README.md
Builds/: CMakeLists.txt
Builds/Linux/: Makefile
Builds/VisualStudio2013/: OECommon.props  OEDebug.props  OEPlugin.props  OEPlugin.sln  OERelease.props  OEx64.props  OEx86.props
Builds/VisualStudio2013/Plugin/: Plugin.vcxproj  Plugin.vcxproj.filters
Plugin/: CMakeLists.txt
Plugin/Builds/: CMakeLists.txt
